<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.troyporter.troysfirstapp.MainActivity"
    android:background="#3b869d">

    <ImageView
        android:id="@+id/test_image"
        android:src="@drawable/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gridLayout"
        android:layout_below="@+id/textView2"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="false">

        <Button
            android:layout_width="140dp"
            android:layout_height="111dp"
            android:text="@string/mentor_link_button_text"
            android:id="@+id/mentorButton"
            android:layout_below="@+id/gridLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_row="0"
            android:layout_column="0"
            android:singleLine="true" />

        <Button
            android:layout_width="140dp"
            android:layout_height="111dp"
            android:text="@string/survey_link_button_text"
            android:id="@+id/surveyButton"
            android:layout_row="0"
            android:layout_column="1" />

        <Button
            android:layout_width="140dp"
            android:layout_height="111dp"
            android:text="@string/articles_link_button_text"
            android:id="@+id/articlesButton"
            android:layout_below="@+id/gridLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_row="1"
            android:layout_column="0"
            android:singleLine="true" />

        <Button
            android:layout_width="140dp"
            android:layout_height="111dp"
            android:text="@string/logIn_link_button_text"
            android:id="@+id/logInButton"
            android:layout_below="@+id/gridLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_row="1"
            android:layout_column="1"
            android:singleLine="true" />

    </GridLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:gravity="center"
        android:text="@string/main_page_title"
        android:textColor="#52D017"
        android:textSize="40sp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="no buttons clicked"
        android:id="@+id/buttonTestText"
        android:layout_below="@+id/gridLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
