<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.troyporter.troysfirstapp.SurveyActivity"
    tools:showIn="@layout/activity_survey"
    android:background="#96f17a">

    <!--Here is where we will show each question of the survey-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/survey_question_text_view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/survey_yes_button"
        android:text="@string/survey_yes_button_text"
        android:layout_centerHorizontal="true"
        android:background="@color/darkGreen"
        android:layout_below="@id/survey_question_text_view"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/survey_no_button"
        android:text="@string/survey_no_button_text"
        android:layout_centerHorizontal="true"
        android:background="@color/red"
        android:layout_below="@id/survey_yes_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/survey_skip_button"
        android:text="@string/survey_skip_button_text"
        android:layout_centerHorizontal="true"
        android:background="@color/yellow"
        android:layout_below= "@id/survey_no_button"/>

    <!--Fragment for Navigation Bar-->
    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="com.example.troyporter.troysfirstapp.NavigationBarFragment"
        android:id="@+id/fragment2"
        tools:layout="@layout/navigation_bar_fragment"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="119dp" />

</RelativeLayout>
